@@ -473,7 +473,12 @@ class WFModelCodeGenPropel extends WFObject
         $this->smarty->assign('sharedEntityId', $sharedEntityId);
         $this->smarty->assign('sharedEntityPrimaryKeyProperty', $entity->valueForKey('primaryKeyProperty'));
         $this->smarty->assign('descriptiveColumnName', $entity->valueForKey('descriptiveColumnName'));
-        $this->smarty->assign('descriptiveColumnConstantName', strtoupper($entity->valueForKey('descriptiveColumnName')));
+
+        // look up Peer column constant name from the PHP name; call ObjPeer::translateFieldName($name, $fromType, $toType)
+        $translateF = array($entity->valueForKey('name') . 'Peer', 'translateFieldName');
+        $peerColName = call_user_func($translateF, ucfirst($entity->valueForKey('descriptiveColumnName')), BasePeer::TYPE_PHPNAME, BasePeer::TYPE_FIELDNAME);
+        $this->smarty->assign('descriptiveColumnConstantName', strtoupper($peerColName));
+
         $moduleCode = $this->smarty->fetch(FRAMEWORK_DIR . '/framework/generator/module.tpl');
         file_put_contents($moduleDir . '/' . $moduleName . '.php', $moduleCode);
 
